fix hover over menu text, now no effect

--- a/endare.html
+++ b/endare.html
@@ -24,7 +24,7 @@
     <nav class="scrollbar">
         <ul>
             <li><a href="#opdracht1">AI chatbot</a></li>
-            <li><a href="#opdracht2">Lorem Ipsum</a></li>
+            <li><a href="#opdracht2">Laravel website</a></li>
         </ul>
     </nav>
 
@@ -32,6 +32,7 @@
         <div class="opdracht">
             <div id="opdracht1">
                 <h1>Opdracht 1 - AI chatbot</h1>
+                <h3>Dag 1 - 7</h3>
 
                 <div class="carousel">
                     <div class="carousel-item">
@@ -41,18 +42,13 @@
                                 <div>
                                     <p>
                                         Als eerste, inleidende opdracht kreeg ik toegang tot een vue project van een
-                                        chatbot. De
-                                        webpagina
-                                        was
-                                        nog niet voorzien van css en gebruikte bootstrap-vue.
+                                        chatbot. De webpagina was nog niet voorzien van css en gebruikte bootstrap-vue.
                                         Alsook de paginas met de resultaten en het transcript moesten omgevormd worden.
                                         <br>
-                                        Mijn taak was om de webpagina te voorzien van de vooropgestelde stijl. <br>
+                                        Mijn taak was om de webpagina te voorzien van de vooropgestelde stijl. Zodat
+                                        deze presentabel was voor een demo.<br>
                                         De berichten scrollt automatisch naar beneden wanneer er een nieuw bericht is en
-                                        de
-                                        textarea
-                                        voor
-                                        het antwoord vergroot wanneer de tekst meerdere lijnen opneemt.
+                                        de textarea voor het antwoord vergroot wanneer de tekst meerdere lijnen opneemt.
                                     </p>
                                 </div>
 
@@ -110,23 +106,17 @@
                     <div class="carousel-item-container">
                         <div class="carousel-item">
                             <div>
-                                <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
+                                <h2>Opdracht 2 - Laravel Website</h2>
                                 <div>
                                     <div>
                                         <p>
-                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, iste
-                                            aperiam
-                                            voluptatibus quis natus esse?. <br>
-                                            Nam, excepturi saepe ab ad, ratione rerum quaerat eaque minus quam tempore
-                                            harum,
-                                            quo nisi?
-
+                                            Als vervolg op de vorige opdracht vormen we nu een laravel-php website met
+                                            database.
                                         </p>
                                     </div>
 
                                 </div>
 
-                                <img src="assets/images/stage_endare/chatbot/code_snippet_observers.png" width="60%">
                                 <img src="assets/images/stage_endare/chatbot/code_snippet_observers.png" width="60%">
                             </div>
 
