Laravel website - voorbereiding project

--- a/artikel.html
+++ b/artikel.html
@@ -6,10 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/articles.css" />
-    <link rel="stylesheet" href="assets/css/sidemenu.css" />
     <title id="pagetitle"></title>
 </head>
 
@@ -31,9 +28,8 @@
         </section>
     </main>
 
-    <script src="assets/javascript/sidemenu.js"></script>
-    <script src="assets/javascript/displayArticle.js"></script>
-    <script src="assets/javascript/require.js"></script>
+    <script src="assets/js/sidemenu.js"></script>
+    <script src="assets/js/displayArticle.js"></script>
 </body>
 
 </html>
