--- a/endare.html
+++ b/endare.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/general.css" />
-    <link rel="stylesheet" href="assets/css/sidemenu.css" />
     <link rel="stylesheet" href="assets/css/endare.css" />
     <link rel="stylesheet" href="assets/css/carousel.css" />
     <title>Endare</title>
@@ -100,24 +97,41 @@
 
         <div class="opdracht">
             <div id="opdracht2">
-                <h1>Opdracht 2 - Lorem Ipsum</h1>
+                <h1>Opdracht 2 - Laravel Website</h1>
 
                 <div class="carousel">
                     <div class="carousel-item-container">
                         <div class="carousel-item">
                             <div>
-                                <h2>Opdracht 2 - Laravel Website</h2>
+                                <h2>Voorbereiding project</h2>
                                 <div>
                                     <div>
                                         <p>
                                             Als vervolg op de vorige opdracht vormen we nu een laravel-php website met
                                             database.
                                         </p>
+                                        <p>
+                                            Hiervoor is er natuurlijk eerst een duidelijke structuur nodig. In een
+                                            eerste meeting hebben we besproken wat er precies allemaal nodig is in het
+                                            laravelproject. <br> Daarna focuste ik mij op het maken van de structuur van
+                                            het project en van de database. Dit deed ik aan de hand van de tool draw.io.
+                                        </p>
+                                        <p>
+                                            Vervolgens moesten de issues aangemaakt worden. Binnen Endare gebruiken we
+                                            daar Jira voor.<br>
+                                            Om dit consistent te laten zijn met issues vanuit andere projecten waren er
+                                            een paar richtlijnen.
+                                        </p>
+                                        <ul>
+                                            <li>Schrijf het vanuit een perspectief</li>
+                                            <li>Zeg wat dat perspectief wil dat er gebeurt</li>
+                                            <li>Voeg een prioriteit toe aan de issue</li>
+                                            <li>Verdeel issues in subtaken</li>
+                                        </ul>
+                                        <img src="/assets/images/stage_endare/laravel_website/jira_issue.png">
                                     </div>
 
                                 </div>
-
-                                <img src="assets/images/stage_endare/chatbot/code_snippet_observers.png" width="60%">
                             </div>
 
                         </div>
@@ -129,9 +143,8 @@
     </main>
 </body>
 
-<script src="assets/javascript/sidemenu.js"></script>
-<script src="assets/javascript/require.js"></script>
-<script src="assets/javascript/carousel.js"></script>
-<script src="assets/javascript/endare.js"></script>
+<script src="assets/js/sidemenu.js"></script>
+<script src="assets/js/carousel.js"></script>
+<script src="assets/js/endare.js"></script>
 
 </html>
