--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/general.css" />
-    <link rel="stylesheet" href="assets/css/sidemenu.css" />
     <link rel="stylesheet" href="assets/css/home.css" />
     <title>Home</title>
 </head>
@@ -89,8 +86,7 @@
         </section>
     </main>
 
-    <script src="assets/javascript/sidemenu.js"></script>
-    <script src="assets/javascript/require.js"></script>
+    <script src="assets/js/sidemenu.js"></script>
 </body>
 
 </html>
