--- a/opbouw.html
+++ b/opbouw.html
@@ -6,10 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/opbouw.css" />
-    <link rel="stylesheet" href="assets/css/sidemenu.css" />
     <title>Home</title>
 </head>
 
@@ -116,8 +113,7 @@
 
     </main>
 
-    <script src="assets/javascript/sidemenu.js"></script>
-    <script src="assets/javaScript/require.js"></script>
+    <script src="assets/js/sidemenu.js"></script>
 </body>
 
 </html>
