--- a/ucdp.html
+++ b/ucdp.html
@@ -6,10 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/general.css" />
     <link rel="stylesheet" href="assets/css/ucdp.css" />
-    <link rel="stylesheet" href="assets/css/filtermenu.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
 </head>
@@ -17,19 +14,10 @@
 <body>
 
     <header>
-        <div>
-            <div class="filtermenu"></div>
-            <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-            <label for="openSidebarMenu" class="sidebarIconToggle">
-                <div class="spinner diagonal part-1"></div>
-                <div class="spinner horizontal"></div>
-                <div class="spinner diagonal part-2"></div>
-            </label>
-            <div id="sidebarMenu">
-            </div>
+        <div class="sidebar">
         </div>
 
-        <p>UCDP</p>
+        <p>Paper Perlin Noise</p>
         <p><a href="index.html">Jarno Vandeburie</a></p>
     </header>
 
@@ -43,17 +31,18 @@
             <p>Deze paper legt dus stap voor stap uit hoe je een Perlin Noise map kan laten genereren in de game enigne
                 Unity.</p>
 
-            <embed src="/assets/UCDP.pdf#view=FitV" type="application/pdf"></embed>
-
             <a class="download" href="/assets/UCDP.pdf" download="Paper Perlin Noise"><button class="btn-ucdp"
                     id="btn-ucdp"><i class="fa fa-download"></i> Download</button></a>
+
+            <embed src="/assets/UCDP.pdf#view=FitV" type="application/pdf"></embed>
+
 
 
         </article>
 
     </main>
 
-    <script src="assets/javascript/generateSidebarMenu.js"></script>
+    <script src="assets/js/sidemenu.js"></script>
 </body>
 
 </html>
