--- a/endare.html
+++ b/endare.html
@@ -98,12 +98,14 @@
         <div class="opdracht">
             <div id="opdracht2">
                 <h1>Opdracht 2 - Laravel Website</h1>
+                <h3>Dag 8 - heden</h3>
 
                 <div class="carousel">
                     <div class="carousel-item-container">
                         <div class="carousel-item">
                             <div>
                                 <h2>Voorbereiding project</h2>
+                                <h3>Dag 8 - 10</h3>
                                 <div>
                                     <div>
                                         <p>
@@ -114,8 +116,15 @@
                                             Hiervoor is er natuurlijk eerst een duidelijke structuur nodig. In een
                                             eerste meeting hebben we besproken wat er precies allemaal nodig is in het
                                             laravelproject. <br> Daarna focuste ik mij op het maken van de structuur van
-                                            het project en van de database. Dit deed ik aan de hand van de tool draw.io.
+                                            het project en van de database. Dit deed ik aan de hand van de tool <a
+                                                href="https://www.draw.io" target="_blank">draw.io</a>.
                                         </p>
+                                        <div style="margin-bottom: 40px;">
+                                            <img src="/assets/images/stage_endare/laravel_website/project_structure.png"
+                                                width="30%" style="margin-right: 3vw;">
+                                            <img src="/assets/images/stage_endare/laravel_website/database_model.png"
+                                                width="50%">
+                                        </div>
                                         <p>
                                             Vervolgens moesten de issues aangemaakt worden. Binnen Endare gebruiken we
                                             daar Jira voor.<br>
@@ -133,6 +142,10 @@
 
                                 </div>
                             </div>
+
+                        </div>
+
+                        <div class="carousel-item">
 
                         </div>
                     </div>
